fix(Icon): fix badge number align

--- a/packages/info/index.less
+++ b/packages/info/index.less
@@ -6,6 +6,7 @@
   top: 0;
   right: 0;
   box-sizing: border-box;
+  line-height: 1.2;
   white-space: nowrap;
   text-align: center;
   transform: translate(50%, -50%);
@@ -17,7 +18,6 @@
   .theme(font-weight, '@info-font-weight');
   .theme(font-size, '@info-font-size');
   .theme(font-family, '@info-font-family');
-  .theme(line-height, 'calc(@info-size - @info-border-width * 2)');
   .theme(background-color, '@info-background-color');
   .theme(border, '@info-border-width solid @white');
   .theme(border-radius, '@info-size');
